// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarButton render() basic 1`] = `
<div>
  <SvgIcon
    file="calendar"
  />
</div>
`;

exports[`CalendarButton render() if style 1`] = `
<div
  style={
    Object {
      "backgroundColor": "rebeccapurple",
    }
  }
>
  <SvgIcon
    file="calendar"
  />
</div>
`;
